force-app/main/default/objects/Account/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <label>Fareshare Account Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>