force-app/main/default/objects/Account/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <inlineHelpText>Tier 0 = Accounts that have given over £500k in last FY
Tier 1 = Accounts that have given between £100k and £500k in last FY
Tier 2 = Accounts that have given between £50k and £100k in last FY
Tier 3 = Accounts that have given between £10k and £50k in last FY
Tier 4 = Accounts that have given under £10k in last FY</inlineHelpText>
    <label>Account Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 0</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>