force-app/main/default/objects/Account/fields/Acknowledgements__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgements__c</fullName>
    <label>Acknowledgements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Asked</fullName>
                <default>true</default>
                <label>Not Asked</label>
            </value>
            <value>
                <fullName>Acknowledge</fullName>
            </value>
            <value>
                <fullName>Do Not Acknowledge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>