force-app/main/default/objects/Account/fields/Alternative_email_sj__c.field-meta.xml
<CustomField>
    <fullName>Alternative_email_sj__c</fullName>
    <description>Alternative email address</description>
    <label>Alternative email</label>
    <type>Email</type>
</CustomField>