force-app/main/default/objects/Account/fields/Anonymize_Data__c.field-meta.xml
<CustomField>
    <fullName>Anonymize_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anonymize Data</label>
    <type>Checkbox</type>
</CustomField>