force-app/main/default/objects/Account/fields/charity_comm__Charity_Type__c.field-meta.xml
<CustomField>
    <fullName>charity_comm__Charity_Type__c</fullName>
    <label>Charity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Previously excepted</fullName>
            </value>
            <value>
                <fullName>CIO</fullName>
            </value>
            <value>
                <fullName>Charitable company</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>