force-app/main/default/objects/Account/fields/charity_comm__Date_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>charity_comm__Date_of_Registration__c</fullName>
    <label>Date of Registration</label>
    <type>Date</type>
</CustomField>