force-app/main/default/objects/Account/fields/charity_comm__Link_to_Charity_Commission__c.field-meta.xml
<CustomField>
    <fullName>charity_comm__Link_to_Charity_Commission__c</fullName>
    <formula>IF(  ISBLANK( charity_comm__Organisation_Number__c ), &apos;&apos;,  HYPERLINK( &quot;https://register-of-charities.charitycommission.gov.uk/charity-search/-/charity-details/&quot; &amp; charity_comm__Organisation_Number__c, &quot;click here&quot;))</formula>
    <label>Link to Charity Commission</label>
    <type>Text</type>
</CustomField>