force-app/main/default/objects/Account/fields/charity_comm__Registered_Charity_Number__c.field-meta.xml
<CustomField>
    <fullName>charity_comm__Registered_Charity_Number__c</fullName>
    <label>Registered Charity Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>