force-app/main/default/objects/Account/fields/charity_comm__Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>charity_comm__Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>