force-app/main/default/objects/Account/fields/Charity_number__c.field-meta.xml
<CustomField>
    <fullName>Charity_number__c</fullName>
    <label>Charity number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>