force-app/main/default/objects/Account/fields/comp_house__Company_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>comp_house__Company_Jurisdiction__c</fullName>
    <label>Company Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>