force-app/main/default/objects/Account/fields/comp_house__Company_Type__c.field-meta.xml
<CustomField>
    <fullName>comp_house__Company_Type__c</fullName>
    <label>Company Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>