force-app/main/default/objects/Account/fields/FS_Last_Date_Donated__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Date_Donated__c</fullName>
    <label>Last Date Donated</label>
    <type>Date</type>
</CustomField>