force-app/main/default/objects/Account/fields/Funder_Type__c.field-meta.xml
<CustomField>
    <fullName>Funder_Type__c</fullName>
    <label>Funder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Statutory</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>