force-app/main/default/objects/Account/fields/Mission_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Mission_Objectives__c</fullName>
    <description>To capture the organisation&apos;s mission and objectives.</description>
    <label>Mission / Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>