force-app/main/default/objects/Account/fields/movedata__Protect_Name__c.field-meta.xml
<CustomField>
    <fullName>movedata__Protect_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ensures the MoveData integration doesn&apos;t replace the Account name.</description>
    <label>Protect Name</label>
    <type>Checkbox</type>
</CustomField>