force-app/main/default/objects/Account/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <label>Partnership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COTY</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>