force-app/main/default/objects/Account/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <inlineHelpText>Only used for manual relationship management. NB This field is not used in mass mailings</inlineHelpText>
    <label>Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>