force-app/main/default/objects/Account/fields/PreviouslyAwareOfFareShare__c.field-meta.xml
<CustomField>
    <fullName>PreviouslyAwareOfFareShare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Aware of FareShare</label>
    <type>Checkbox</type>
</CustomField>