force-app/main/default/objects/Account/fields/SharePoint_File_Storage__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_File_Storage__c</fullName>
    <label>SharePoint File Storage</label>
    <type>Url</type>
</CustomField>