force-app/main/default/objects/Account/fields/Supplier_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Status__c</fullName>
    <label>Supplier Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre Registration</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>