force-app/main/default/objects/Account/fields/Top_90__c.field-meta.xml
<CustomField>
    <fullName>Top_90__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Top 90</label>
    <type>Checkbox</type>
</CustomField>