force-app/main/default/objects/Account/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <label>Ultimate Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>