force-app/main/default/objects/Account/fields/URN__c.field-meta.xml
<CustomField>
    <fullName>URN__c</fullName>
    <displayFormat>C{00000000}</displayFormat>
    <label>URN</label>
    <type>AutoNumber</type>
</CustomField>