force-app/main/default/objects/Account/fields/Wealth_Band__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Band__c</fullName>
    <label>Wealth Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Wealth_Band</valueSetName>
    </valueSet>
</CustomField>