force-app/main/default/objects/Account/validationRules/Do_Not_Contact_Reason_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Contact_Reason_Is_Required</fullName>
    <active>true</active>
    <description>Do Not Contact Reason Is Required if Do Not Contact checkbox is checked</description>
    <errorConditionFormula>AND (Do_Not_Contact__pc, ISBLANK(TEXT(Do_Not_Contact_Reason__pc)))</errorConditionFormula>
    <errorMessage>Please select a &apos;Do Not Contact Reason&apos; if the Do Not Contact checkbox is ticked.</errorMessage>
</ValidationRule>