force-app/main/default/objects/Account/validationRules/Home_Phone_Length_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Phone_Length_Validation</fullName>
    <active>true</active>
    <description>Rule to ensure phone number is valid.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( PersonHomePhone )),
    NOT(OR(
        LEN(PersonHomePhone) = 12,
        LEN(PersonHomePhone) = 11,
        LEN(PersonHomePhone) = 9
    ))
)

&amp;&amp; NOT( $Permission.Exclude_from_Validation )</errorConditionFormula>
    <errorDisplayField>PersonHomePhone</errorDisplayField>
    <errorMessage>Please enter a valid Phone number.</errorMessage>
</ValidationRule>