force-app/main/default/objects/Account/validationRules/Mobile_Length_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Length_Validation</fullName>
    <active>true</active>
    <description>Rule to ensure phone number is valid.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(PersonMobilePhone)),
NOT(OR(
LEN(PersonMobilePhone) = 12,
LEN(PersonMobilePhone) = 11,
LEN(PersonMobilePhone) = 9
))
)

&amp;&amp; NOT( $Permission.Exclude_from_Validation )</errorConditionFormula>
    <errorDisplayField>PersonMobilePhone</errorDisplayField>
    <errorMessage>Please enter a valid Phone number.</errorMessage>
</ValidationRule>