force-app/main/default/objects/Account/validationRules/Phone_Length_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Length_Validation</fullName>
    <active>true</active>
    <description>Rule to ensure phone number is valid.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
    NOT(OR(
        LEN(Phone) = 12,
        LEN(Phone) = 11,
        LEN(Phone) = 9
    ))
)

&amp;&amp; NOT( $Permission.Exclude_from_Validation )</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid Phone number.</errorMessage>
</ValidationRule>