force-app/main/default/objects/Account/listViews/All_Corporate_Business_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Corporate_Business_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Tier__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Funder_Type__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business_Account</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Corporate</value>
    </filters>
    <label>All Corporate Business Accounts</label>
</ListView>