force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>PC_ADDRESS2_STREET</columns>
    <columns>PC_ADDRESS2_CITY</columns>
    <columns>PC_ADDRESS2_STATE</columns>
    <columns>PC_ADDRESS2_ZIP</columns>
    <columns>PC_ADDRESS2_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>