force-app/main/default/objects/Account/listViews/Person_Account.listView-meta.xml
<ListView>
    <fullName>Person_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Partnership_Type__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.PersonAccount</value>
    </filters>
    <label>Person Account</label>
</ListView>